package solid.interfacesegregation.badexample;

public class Operations {


    public void operation1(){};

    public void operation2(){};

    public void operation3(){};
}
