@startuml

title __BADEXAMPLE's Class Diagram__\n

  namespace solid.interfacesegregation.badexample {
    class solid.interfacesegregation.badexample.AContainer {
        + AContainer()
        + doYourContainerStuffToMe()
    }
  }
  

  namespace solid.interfacesegregation.badexample {
    class solid.interfacesegregation.badexample.AMachine {
        + AMachine()
        + doSomeWork()
    }
  }
  

  namespace solid.interfacesegregation.badexample {
    class solid.interfacesegregation.badexample.MUser {
        + MUser()
        + doYourOperations()
    }
  }
  

  namespace solid.interfacesegregation.badexample {
    class solid.interfacesegregation.badexample.Operations {
        + operation1()
        + operation2()
        + operation3()
    }
  }
  

  solid.interfacesegregation.badexample.AContainer o-- solid.interfacesegregation.badexample.Operations : ops
  solid.interfacesegregation.badexample.AMachine o-- solid.interfacesegregation.badexample.Operations : ops
  solid.interfacesegregation.badexample.MUser o-- solid.interfacesegregation.badexample.Operations : ops


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
